tester/src/test/aya/failure/operator/cyclic.aya.txt
In file $FILE:5:0 ->

  3 | 
  4 | bind + tighter x
  5 | bind x tighter +
      ^--------------^
  
Error: Cyclic operator precedence found after making `x` tighter than `+`; Because `x` is already looser than `+`
Resolving interrupted due to error(s).
What are you doing?
